#748 Set mycore version to 2024.06.x (#749)
* #748 Set mycore version to 2024.06.1-SNAPSHOT and mycore parent version to 57-SNAPSHOT
* #748 Removed usage of already deprecated mycore api
* #748 Added now required property MCR.Solr.Core.dbt.Type
* #748 Updated maven-pr.yml
* #748 Overwrite properties MCR.JPA.GloballyQuotedIdentifiers.SkipColumnDefinitions and  MCR.JPA.GloballyQuotedIdentifiers
* #750 Use shorthand variables for SAXON
* #750 Do not use MCRURIResolver for fetching xml from sru
* #748 Cleanup dependency management
* #748 Fixed ThUniBibImportJobAction
* #748 Set mycore version to 2024.06.2-SNAPSHOT
* #748 Added solr cloud default properties